complete output vignette

--- a/vignettes/taxsim-input.Rmd
+++ b/vignettes/taxsim-input.Rmd
@@ -1,6 +1,5 @@
 ---
 title: "Description of Input Columns"
-author: "Shane Orr"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Description of Input Columns}
@@ -15,13 +14,9 @@ knitr::opts_chunk$set(
 )
 ```
 
-```{r setup}
-library(usincometaxes)
-```
+`usincometaxes` calculates taxes through the function `taxsim_calculate_taxes(.data)`. The key parameter in this function is `.data`, which is a data frame containing the information used to calculate income taxes. Each column in `.data` contains financial or household information and maps to the variables in [TAXSIM 32](http://users.nber.org/~taxsim/taxsim32/). All variables in TAXSIM 32 can be used in `usincometaxes`. 
 
-`usincometaxes` calculates taxes through the function `taxsim_calculate_taxes`. The key parameter in this function is `.data`, which is a data set containing the information used to calculate income taxes. Each column contains a separate piece of financial or household information and maps the variables in [TAXSIM 32](http://users.nber.org/~taxsim/taxsim32/). All variables in TAXSIM 32 can be used in `usincometaxes`. 
-
-The column names in `usincometaxes`, however, are not the same as TAXSIM 32's variable names. `usincometaxes`uses more descriptive column names and column names in `.data` must match the column names listed below exactly. Only four columns are required.
+The column names in `usincometaxes`, however, are not the same as TAXSIM 32's variable names. `usincometaxes`uses more descriptive column names and column names in `.data` must match the column names listed below exactly.
 
 .data` can contain columns beyond those listed below. These columns will be ignored.
 
@@ -30,11 +25,11 @@ The column names in `usincometaxes`, however, are not the same as TAXSIM 32's va
 * **id_number**: An arbitrary, non-negative, *integer*. This number links the results from TAXSIM
     32 to the original input data frame specified with `.data`.
     * `taxsimid` in TAXSIM 32
-<br>     
+<br>       
 * **tax_year**: Tax year ending Dec 31 (4 digits between 1960 and 2023). State must be zero if
       year is before 1977 or after 2023.
     * `year` in TAXSIM 32
-<br>        
+<br>          
 * **filing_status**: Filing status of tax unit. One of the following: 
     * "single" for single;
     * "married, jointly" for married, filing jointly; 
@@ -42,58 +37,59 @@ The column names in `usincometaxes`, however, are not the same as TAXSIM 32's va
     * "dependent child" for dependent, usually a child with income; or
     * "head of household" for head of household filing status.
         * `mstat` in TAXSIM 32
-<br> 
+<br>   
 
 ## Optional columns
 
-* **state**: State two letter abbreviation ('NC'), full state name ('North Carolina') or [state SOI code](https://users.nber.org/~taxsim/statesoi.html) (32). If state income taxes are not needed,
-      either label as "No State" or remove this variable. State income tax information is only available from 1977 to 2023.
+* **state**: State two letter abbreviation ('NC'), full state name ('North Carolina') or [state SOI code](https://users.nber.org/~taxsim/statesoi.html) (32). 
+    If state income taxes are not needed,
+    either label as "No State" or remove this variable. State income tax information is only available from 1977 to 2023.
     * `state` in TAXSIM 32
-<br> 
+<br>    
 * **primary_age**: Age of primary taxpayer as of December 31st of tax year. Taxpayer age variables
       determine eligibility for additional standard deductions, personal exemption, EITC and AMT exclusion.
     * `page` in TAXSIM 32
-<br> 
+<br>    
 * **spouse_age**: Age of spouse as of December 31st of tax year (or 0 / NA if no spouse).
     * `sage` in TAXSIM 32
-<br> 
+<br>    
 * **num_dependents**: Total number of dependents (part of personal exemption calculation).
     * `depx` in TAXSIM 32
-<br> 
+<br>    
 * **num_dependents_thirteen**: Number of children under 13 with eligible child care expenses (Dependent Care Credit).
     * `dep13` in TAXSIM 32
-<br> 
+<br>   
 * **num_dependents_seventeen**: Number of children under 17 for the entire tax year (Child Credit).
       This includes children under 13.
     * `dep17` in TAXSIM 32
-<br> 
+<br>   
 * **num_dependents_eitc**: Number of qualifying children for EITC. (Typically younger than 19 or
       younger than 24 and a full-time student).
     * `dep18` in TAXSIM 32
-<br> 
+<br>   
 
 *`num_dependents_` columns are not mutually exclusive. For example, a family with a 13 year old
  can report the dependent in `num_dependents_thirteen` and also in `num_dependents_seventeen`.* 
 
 * **primary_wages**: Wage and salary income of Primary Taxpayer (include self-employment but no QBI).
     * `pwages` in TAXSIM 32
-<br> 
+<br>   
 * **spouse_wages**: Wage and salary income of Spouse (include self-employment but no QBI). Must
       be zero or the column should not exist for non-joint returns.
     * `swages` in TAXSIM 32
-<br> 
+<br>   
 * **dividends**: Dividend income (qualified dividends only for 2003 on).
     * `dividends` in TAXSIM 32
-<br> 
+<br>   
 * **interest**: Interest income received (+/-).
     * `intrec` in TAXSIM 32
-<br> 
+<br>   
 * **short_term_capital_gains**: Short Term Capital Gains or losses (+/-).
     * `stcg` in TAXSIM 32
-<br> 
+<br>   
 * **long_term_capital_gains**: Long Term Capital Gains or losses (+/-).
     * `ltcg` in TAXSIM 32
-<br> 
+<br>   
 * **other_property_income**: Other property income subject to NIIT, including: 
     * Unearned or limited partnership and passive S-Corp profits; 
     * Rent not eligible for QBI deduction;
@@ -101,7 +97,7 @@ The column names in `usincometaxes`, however, are not the same as TAXSIM 32's va
     * Capital gains distributions on form 1040; and
     * Other income or loss not otherwise enumerated here.
         * `otherprop` in TAXSIM 32
-<br> 
+<br>   
 * **other_non_property_income**: Other non-property income not subject to Medicare NIIT such as:
       * Alimony; 
       * Nonwage fellowships; 
@@ -111,40 +107,40 @@ The column names in `usincometaxes`, however, are not the same as TAXSIM 32's va
       * Foreign income exclusion; and 
       * NOLs.
           * `nonprop` in TAXSIM 32
-<br> 
+<br>   
 * **pensions**: Taxable Pensions and IRA distributions.
     * `pensions` in TAXSIM 32
-<br> 
+<br>   
 * **social_security**: Gross Social Security Benefits.
     * `ggsi` in TAXSIM 32
-<br> 
+<br>   
 * **unemployment**: Unemployment compensation received.
     * `pensions` in TAXSIM 32
-<br> 
+<br>   
 * **other_transfer_income**: Other non-taxable transfer income such as: 
     * Welfare; 
     * Workers comp;
     * Veterans benefits; and 
     * Child support that would affect eligibility for state property tax rebates but would not be taxable at the federal level.
         * `transfers` in TAXSIM 32
-<br> 
+<br>   
 * **rent_paid**: Rent paid (used only for calculating state property tax rebates).
     * `rentpaid` in TAXSIM 32
-<br> 
+<br>   
 * **property_taxes**: Real Estate taxes paid. This is a preference for the AMT and is is also
       used to calculate state property tax rebates.
     * `proptax` in TAXSIM 32
-<br> 
+<br>   
 * **other_itemized_deductions**: Other Itemized deductions that are a preference for the Alternative
       Minimum Tax. These would include: 
       * Other state and local taxes (line 8 of Schedule A) plus local income tax; 
       * Preference share of medical expenses; and 
       * Miscellaneous (line 27).
           * `otheritem` in TAXSIM 32
-<br> 
+<br>   
 * **child_care_expenses**: Child care expenses.
     * `childcare` in TAXSIM 32
-<br> 
+<br>   
  **misc_deductions**: Deductions not included in `other_itemized_deductions` and not a preference
       for the AMT, including (on Schedule A for 2009):
       * Deductible medical expenses not included in Line 16; 
@@ -153,23 +149,23 @@ The column names in `usincometaxes`, however, are not the same as TAXSIM 32's va
       * Charitable contributions; and 
       * Casualty or Theft Losses.
           * `mortgage` in TAXSIM 32
-<br> 
+<br>   
 * **scorp_income**: Active S-Corp income (is SSTB).
     * `scorp` in TAXSIM 32
-<br> 
+<br>   
 * **qualified_business_income**: Primary Taxpayer's Qualified Business Income (QBI) subject to a
       preferential rate without phaseout and assuming sufficient wages paid or capital to be eligible
       for the full deduction. Subject to SECA and Medicare additional Earnings Tax.
      * `pbusinc` in TAXSIM 32
-<br> 
+<br>   
 * **specialized_service_trade**: Primary Taxpayer's Specialized Service Trade or Business service
       (SSTB) with a preferential rate subject to claw-back. Subject to SECA and Medicare Additional Earnings Tax.
       * `pprofinc` in TAXSIM 32
-<br> 
+<br>   
 * **spouse_qualified_business_income**: Spouse's QBI. Must be zero for non-joint returns, or the
       column should not exist.
       * `sbusinc` in TAXSIM 32
-<br> 
+<br>   
 * **spouse_specialized_service_trade**: Spouse's SSTB. Must be zero for non-joint returns, or the
       column should not exist.
       * `sprofinc`
