--- a/vignettes/taxsim-input.Rmd
+++ b/vignettes/taxsim-input.Rmd
@@ -1,5 +1,6 @@
 ---
 title: "Description of Input Columns"
+author: "Shane Orr"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Description of Input Columns}
