--- a/vignettes/taxsim-output.Rmd
+++ b/vignettes/taxsim-output.Rmd
@@ -1,5 +1,6 @@
 ---
 title: "Description of Output Columns"
+author: "Shane Orr"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Description of Output Columns}
