--- a/vignettes/using-usincometaxes.Rmd
+++ b/vignettes/using-usincometaxes.Rmd
@@ -1,20 +1,49 @@
 ---
 title: "Calculating Federal and State Income Taxes"
 output: rmarkdown::html_vignette
+author: "Shane Orr"
 vignette: >
   %\VignetteIndexEntry{Calculating Federal and State Income Taxes}
   %\VignetteDepends{ggplot2}
   %\VignetteDepends{dplyr}
   %\VignetteDepends{kableExtra}
+  %\VignetteDepends{scales}
+  %\VignetteDepends{tidyr}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
+
 ---
 
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = "#>"
+  comment = "#>",
+  fig.align = 'center',
+  fig.path = 'webimg/',
+  fig.width = 6,
+  fig.height = 4,
+  dpi = 72,
+  dev = 'png'
 )
+
+get_os = function() {
+  sysinf = Sys.info()
+  if (!is.null(sysinf)) {
+    os = sysinf['sysname']
+    if (os == 'Darwin')
+      os = 'osx'
+  } else { ## mystery machine
+    os = .Platform$OS.type
+    if (grepl('^darwin', R.version$os))
+      os = 'osx'
+    if (grepl('linux-gnu', R.version$os))
+      os = 'linux'
+  }
+  tolower(os)
+}
+if(get_os() =='windows' & capabilities('cairo') | all(capabilities(c('cairo', 'X11')))) {
+  knitr::opts_chunk$set(dev.args = list(type='cairo'))
+}
 ```
 
 ```{r setup, messages = FALSE}
@@ -29,11 +58,13 @@ library(ggplot2)
 scroll_width <- "800px"
 ```
 
-This article presents two use cases for `usincometaxes`. The first shows users how to calculate income taxes from a data frame containing financial information and other characteristics of tax payer units. This income could come from surveys such as the [Consumer Expenditure survey](https://www.bls.gov/cex/) or the [Panel Study of Income Dynamics survey](https://psidonline.isr.umich.edu/). The second use case focuses on running simulations.
+This article presents two use cases for `usincometaxes`. The first shows users how to estimate income taxes from a data frame containing financial information and other characteristics of tax payer units. This income could come from surveys such as the [Consumer Expenditure survey](https://www.bls.gov/cex/) or the [Panel Study of Income Dynamics survey](https://psidonline.isr.umich.edu/). The second use case focuses on running simulations.
 
-For the examples, we will use an internal data set called `taxpayer_finances`. The data is randomly generated, but it is formatted for use with `usincometaxes`.
+## Calculating income taxes from survey data
 
-## Calcualting income taxes from survey data
+For the first example we will use an internal data set called `taxpayer_finances`. The data is randomly generated and formatted for use with `usincometaxes`. Guidance on formatting data can be found in the [Description of Input Columns](taxsim-input.html) article.
+
+The data set contains financial and other household characteristics that help estimate income taxes.
 
 ```{r import_data}
 data(taxpayer_finances)
@@ -43,6 +74,12 @@ taxpayer_finances %>%
   kable() %>%
   scroll_box(width = scroll_width)
 ```
+
+Each row in the data set is a tax paying unit. Thus, each row files one tax return. Columns represent items reported on tax returns that impact taxes. Of course, the information in the data set does not represent everything people report on tax returns. For this reason, the income tax calculations are simply estimates.
+
+We call `taxsim_calculate_taxes()` to estimate federal and state income taxes for each tax paying unit. `taxsim_calculate_taxes()` sends the data to the [NBER's TAXSIM 32](https://users.nber.org/~taxsim/taxsim32/) program for calculation and returns the results as a data frame.
+
+We are only interested in federal and state tax liabilities, not line item credits and deduction, so we are using `return_all_information = FALSE`.
 
 ```{r calcualte_survey_taxes}
 family_taxes <- taxsim_calculate_taxes(
@@ -56,6 +93,8 @@ family_taxes %>%
   kable()
 ```
 
+The `id_number` column is required for any input data frame used in `taxsim_calculate_taxes`. This column is also returned in the output data frame containing tax calculations, allowing us to link the input and output data frames.
+
 ```{r join_tax_data}
 income_and_taxes <- taxpayer_finances %>%
   left_join(family_taxes, by = 'id_number')
@@ -66,9 +105,9 @@ income_and_taxes %>%
   scroll_box(width = scroll_width)
 ```
 
+Now we have a single data frame containing both wages and income tax liabilities. Let's take a look at the relationship between wages and estimated federal income taxes. The colors represent the number of children 18 or younger.
 
-
-```{r plot_family_taxes}
+```{r plot_family_taxes, fig.height = 6, fig.width = 7}
 # custom theme for all plots in the vignette
 plt_theme <- function() {
   
@@ -85,9 +124,9 @@ plt_theme <- function() {
     )
 }
 
+# color palettes for number of children
 dep_color_palette <- rev(c('#4B0055','#353E7C','#007094','#009B95','#00BE7D','#96D84B'))
 
-# type = dep_color_palette
 income_and_taxes %>%
   mutate(
     tax_unit_income = primary_wages + spouse_wages,
@@ -95,26 +134,29 @@ income_and_taxes %>%
     filing_status = tools::toTitleCase(filing_status)
   ) %>%
   ggplot(aes(tax_unit_income, federal_taxes, color = num_dependents_eitc)) +
-  geom_point(alpha = .5) +
-  scale_x_continuous(labels = scales::label_dollar(scale = .001, suffix = "K"), limits = c(0, 200000)) +
-  scale_y_continuous(labels = scales::label_dollar(scale = .001, suffix = "K"), limits = c(0, 60000)) +
-  scale_color_discrete(type = dep_color_palette) +
-  facet_grid(rows = vars(filing_status), cols = vars(tax_year)) +
-  labs(
-    title = "Federal Income Taxes by Filing Status, Year, and Number of Children",
-    x = "\nTax Unit Wages",
-    y = "Federal Income Taxes"
-  ) +
-  plt_theme() +
-  guides(color = guide_legend(title = "Number of Childern 18 or Younger", title.position = "top", byrow = TRUE))
+    geom_point(alpha = .5) +
+    scale_x_continuous(labels = scales::label_dollar(scale = .001, suffix = "K"), limits = c(0, 200000)) +
+    scale_y_continuous(labels = scales::label_dollar(scale = .001, suffix = "K"), limits = c(-10000, 50000)) +
+    scale_color_discrete(type = dep_color_palette) +
+    facet_grid(rows = vars(filing_status), cols = vars(tax_year)) +
+    labs(
+      title = "Federal Income Taxes by Filing Status, Year, and Number of Children",
+      x = "\nHousehold Wages",
+      y = "Federal Income Taxes"
+    ) +
+    plt_theme() +
+    guides(color = guide_legend(title = "Number of Childern 18 or Younger", title.position = "top", byrow = TRUE))
 ```
+
+The plots shows what we would expect: higher income families pay more in taxes and households pay less the more children they have. We also see the reduction in federal marginal tax rates from 2000 to 2020, as shown by the decrease in income tax liabilities when comparing the two years.
 
 ## Income tax simulations
 
-### Income taxes paid by wages
+### Association between income taxes paid and hosuehold wages
+
+An additional use of `usincometaxes` is to run simulations. This could be as simple as plotting the relationship between wages and income taxes paid. To do this, we first need to create a data set that holds everything constant except for wages. The code block below does this, except it also creates different data sets for households with zero and four children 18 or younger, so we can compare differences on this characteristic as well. 
 
 ```{r}
-
 # calculate taxes from 0 to 200,000 in wages
 wage_linespace <- seq(0, 200000, 100)
 
@@ -151,6 +193,8 @@ family_income %>%
   scroll_box(width = scroll_width)
 ```
 
+Now, we will calculate federal and state income taxes for our simulated data set. Note that `return_all_information = TRUE`. This allows us to examine credit amounts like the Child Tax Credit and Earned Income Tax Credit (EITC).
+
 ```{r}
 family_income_taxes <- taxsim_calculate_taxes(
   .data = family_income,
@@ -164,11 +208,14 @@ family_income_taxes %>%
   scroll_box(width = scroll_width)
 ```
 
+As before, let's merge our tax data with the original input data set.
 
 ```{r}
 family_income <- family_income %>%
   left_join(family_income_taxes, by = 'id_number')
 ```
+
+Now, let's look at the relationship between household wages and estimated income tax liabilities. 
 
 ```{r}
 family_income_long <- family_income %>%
@@ -176,7 +223,7 @@ family_income_long <- family_income %>%
   pivot_longer(cols = c('federal_taxes', 'state_taxes'), 
                names_to = 'jurisdiction', values_to = 'taxes_paid') %>%
   mutate(
-    jurisdiction = recode(jurisdiction, 'federal_taxes' = 'Federal Taxes', 'state_taxes' = 'NC State Taxes'),
+    jurisdiction = recode(jurisdiction, 'federal_taxes' = 'Federal Income Taxes', 'state_taxes' = 'NC State Income Taxes'),
     num_dependents_eitc = factor(num_dependents_eitc, levels = as.character(0:5)),
     post_tax_wages = primary_wages - taxes_paid
   )
@@ -198,13 +245,17 @@ taxes_line_plot(family_income_long, primary_wages, taxes_paid, num_dependents_ei
   labs(
     title = "Relationship Between Wages and Income Taxes Paid",
     subtitle = "Taxpayer is married, filing jointly, in 2020",
-    x = "\nTax Unit Wages",
+    x = "\nPre-Tax Household Wages",
     y = "Federal Income Taxes",
     color = 'Number of Children 18 or Younger:'
   )
 ```
 
+Note that North Carolina had a flat tax of 5.25% in 2020. That's why their taxes increase linearly. 
+
 ### Relationship Between Pre and Post-Tax Wages
+
+We'll create a additional plot comparing pre-tax and post-tax household wages.
 
 ```{r}
 
@@ -213,13 +264,15 @@ taxes_line_plot(family_income_long, primary_wages, post_tax_wages, num_dependent
   labs(
     title = "Relationship Between Pre and Post-Tax Wages",
     subtitle = "Taxpayer is married, filing jointly, in 2020",
-    x = "\nPre-Tax Wages",
-    y = "Post-Tax Wages",
+    x = "\nPre-Tax Household Wages",
+    y = "Post-Tax Hosuehold Wages",
     color = 'Number of Children 18 or Younger:'
   )
 ```
 
-### Federal Earned Income Tax Credit
+### Child Tax Credit and Earned Income Tax Credit (EITC)
+
+As noted previously, setting `return_all_information = TRUE` lets us retrieve additional output. Included in this additional output are amounts for the Child Tax Credit and EITC. Let's look at the amounts for both credits, while varying household wages. The values reflect a household with four children 18 or younger.
 
 ```{r}
 tax_items_mapping <- c(
