--- a/vignettes/using-usincometaxes.Rmd
+++ b/vignettes/using-usincometaxes.Rmd
@@ -11,7 +11,6 @@ vignette: >
   %\VignetteDepends{tidyr}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
-
 ---
 
 ```{r, include = FALSE}
@@ -47,10 +46,8 @@ The data set contains financial and other household characteristics that help es
 
 ```{r import_data}
 data(taxpayer_finances)
-
 # with of scroll box for tables
 scroll_width <- "800px"
-
 taxpayer_finances %>%
   head() %>%
   kable() %>%
@@ -59,16 +56,16 @@ taxpayer_finances %>%
 
 Each row in the data set is a tax paying unit. Thus, each row files one tax return. Columns represent items reported on tax returns that impact taxes. Of course, the information in the data set does not represent everything people report on tax returns. For this reason, the income tax calculations are simply estimates.
 
-We call `taxsim_calculate_taxes()` to estimate federal and state income taxes for each tax paying unit. `taxsim_calculate_taxes()` sends the data to the [NBER's TAXSIM 35](http://taxsim.nber.org/taxsim35/) program for calculation and returns the results as a data frame.
+We call `taxsim_calculate_taxes()` to estimate federal and state income taxes for each tax paying unit. `taxsim_calculate_taxes()` sends the data to the [NBER's TAXSIM 32](https://users.nber.org/~taxsim/taxsim32/) program for calculation and returns the results as a data frame.
 
 We are only interested in federal and state tax liabilities, not line item credits and deduction, so we are using `return_all_information = FALSE`.
 
 ```{r calcualte_survey_taxes}
 family_taxes <- taxsim_calculate_taxes(
   .data = taxpayer_finances,
-  return_all_information = FALSE
+  return_all_information = FALSE,
+  upload_method = 'ftp'
 )
-
 family_taxes %>%
   head() %>%
   kable()
@@ -79,7 +76,6 @@ The `id_number` column is required for any input data frame used in `taxsim_calc
 ```{r join_tax_data}
 income_and_taxes <- taxpayer_finances %>%
   left_join(family_taxes, by = 'id_number')
-
 income_and_taxes %>%
   head() %>%
   kable() %>%
@@ -104,19 +100,15 @@ plt_theme <- function() {
       legend.position = 'bottom'
     )
 }
-
 # color palettes for number of children
 dep_color_palette <- rev(c('#4B0055','#353E7C','#007094','#009B95','#00BE7D','#96D84B'))
-
-n_kids <- max(income_and_taxes$num_dependents)
-
 income_and_taxes %>%
   mutate(
     tax_unit_income = primary_wages + spouse_wages,
-    num_dependents = factor(num_dependents, levels = as.character(0:n_kids)),
+    num_dependents_eitc = factor(num_dependents_eitc, levels = as.character(0:5)),
     filing_status = tools::toTitleCase(filing_status)
   ) %>%
-  ggplot(aes(tax_unit_income, federal_taxes, color = num_dependents)) +
+  ggplot(aes(tax_unit_income, federal_taxes, color = num_dependents_eitc)) +
     geom_point(alpha = .5) +
     scale_x_continuous(labels = scales::label_dollar(scale = .001, suffix = "K"), limits = c(0, 200000)) +
     scale_y_continuous(labels = scales::label_dollar(scale = .001, suffix = "K"), limits = c(-10000, 50000)) +
@@ -142,33 +134,30 @@ An additional use of `usincometaxes` is to run simulations. This could be as sim
 ```{r}
 # calculate taxes from 0 to 200,000 in wages
 wage_linespace <- seq(0, 200000, 100)
-
+n_kids <- 4
 base_family_income <- data.frame(
   tax_year = 2020,
   filing_status = 'married, jointly',
   state = 'NC',
   primary_age = 40,
   spouse_age = 40,
-  num_dependents = 4,
-  age_youngest_dependent = 1, 
-  age_second_youngest_dependent = 2, 
-  age_third_youngest_dependent = 3,
+  num_dependents = n_kids,
+  num_dependents_thirteen = n_kids,
+  num_dependents_seventeen = n_kids,
+  num_dependents_eitc = n_kids,
   primary_wages = wage_linespace,
   spouse_wages = 0
 )
-
 # create an additional data se twith no dependents and add it to the original
 family_income <- base_family_income %>%
   bind_rows(
-    # make all number of dependent columns 0
+    # make all numeber of dependent columns 0
     base_family_income %>%
-      mutate(across(starts_with('age'), ~0)) %>%
-      mutate(num_dependents = 0)
+      mutate(across(starts_with('num'), ~0))
   ) %>%
   # add unique ID to each row
   mutate(id_number = row_number()) %>%
   select(id_number, everything())
-
 family_income %>%
   head() %>%
   kable() %>%
@@ -180,9 +169,9 @@ Now, we will calculate federal and state income taxes for our simulated data set
 ```{r}
 family_income_taxes <- taxsim_calculate_taxes(
   .data = family_income,
-  return_all_information = TRUE
+  return_all_information = TRUE,
+  upload_method = 'ftp'
 )
-
 family_income_taxes %>%
   head() %>%
   kable() %>%
@@ -200,17 +189,16 @@ Now, let's look at the relationship between household wages and estimated income
 
 ```{r}
 family_income_long <- family_income %>%
-  select(primary_wages, num_dependents, federal_taxes, state_taxes) %>%
+  select(primary_wages, num_dependents_eitc, federal_taxes, state_taxes) %>%
   pivot_longer(cols = c('federal_taxes', 'state_taxes'), 
                names_to = 'jurisdiction', values_to = 'taxes_paid') %>%
   mutate(
     jurisdiction = recode(jurisdiction, 'federal_taxes' = 'Federal Income Taxes', 'state_taxes' = 'NC State Income Taxes'),
-    num_dependents = factor(num_dependents, levels = as.character(0:n_kids)),
+    num_dependents_eitc = factor(num_dependents_eitc, levels = as.character(0:5)),
     post_tax_wages = primary_wages - taxes_paid
   )
-
+# primary_wages, taxes_paid, color = as.character(num_dependents_eitc)
 taxes_line_plot <- function(.data, x_var, y_var, color_var) {
-
   ggplot(.data, aes({{x_var}}, {{y_var}}, color = {{color_var}})) +
     geom_line(size = 1, alpha = .8) +
     geom_hline(yintercept = 0) +
@@ -220,8 +208,7 @@ taxes_line_plot <- function(.data, x_var, y_var, color_var) {
     plt_theme()
   
 }
-
-taxes_line_plot(family_income_long, primary_wages, taxes_paid, num_dependents) +
+taxes_line_plot(family_income_long, primary_wages, taxes_paid, num_dependents_eitc) +
   facet_wrap(vars(jurisdiction)) +
   labs(
     title = "Relationship Between Wages and Income Taxes Paid",
@@ -239,8 +226,7 @@ Note that North Carolina had a flat tax of 5.25% in 2020. That's why their taxes
 We'll create a additional plot comparing pre-tax and post-tax household wages.
 
 ```{r}
-
-taxes_line_plot(family_income_long, primary_wages, post_tax_wages, num_dependents) +
+taxes_line_plot(family_income_long, primary_wages, post_tax_wages, num_dependents_eitc) +
   facet_wrap(vars(jurisdiction)) +
   labs(
     title = "Relationship Between Pre and Post-Tax Wages",
@@ -260,9 +246,8 @@ tax_items_mapping <- c(
   eitc = 'Earned Income Tax Credit',
   child_tax_credit = 'Child Tax Credit'
 )
-
 family_income %>%
-  filter(num_dependents == 4) %>%
+  filter(num_dependents_eitc == 4) %>%
   mutate(child_tax_credit = child_tax_credit_adjusted + child_tax_credit_refundable) %>%
   select(primary_wages, federal_taxes, eitc, child_tax_credit) %>%
   pivot_longer(cols = names(tax_items_mapping), names_to = 'tax_item', values_to = 'amount') %>%
